# hello-instance-rendering

./: CMakeLists.txt  README.md
assets/models/skull/: license.txt
assets/shaders/: model.frag  model.vert  skybox.vert
src/: camera.cpp  camera.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
